fix text spacing

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -85,6 +85,8 @@ section.section
   border: 1px solid #eaecee;
 
   .text
+    width: 100%;
+    
     @include tablet
       padding: 1rem 2rem 0;
 
